Fix compiler and test warnings
- Fix unchecked cast warnings in Job.java and JobRegistry.java by adding @SuppressWarnings("unchecked") annotations
- Fix deprecated RemoteJWKSet and URL constructor in PathlingJwtDecoderBuilder.java by using URI.create().toURL()
- Replace deprecated scala.collection.JavaConverters with scala.jdk.javaapi.CollectionConverters in ExportOperationTest.java and FhirServer.java
- Fix unchecked cast warnings in test files (ExportOperationIT.java, SecurityTestForOperations.java)
- Replace deprecated AsyncResult with CompletableFuture.completedFuture() in TestSecurityConfig.java
- Fix ineffective @Order annotation warning by adding @TestMethodOrder to SecurityDisabledOperationsTest.java